add spring security

--- a/base-api/pom.xml
+++ b/base-api/pom.xml
@@ -11,4 +11,14 @@
 
     <artifactId>base-api</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-extension</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.boot</groupId>
+            <artifactId>dubbo-spring-boot-starter</artifactId>
+        </dependency>
+    </dependencies>
 </project>
