--- a/user/user-web/pom.xml
+++ b/user/user-web/pom.xml
@@ -50,6 +50,17 @@
         <dependency>
             <groupId>com.alibaba.boot</groupId>
             <artifactId>dubbo-spring-boot-starter</artifactId>
+            <exclusions>
+                <exclusion>
+                    <artifactId>spring-boot-starter</artifactId>
+                    <groupId>org.springframework.boot</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.wyy</groupId>
+            <artifactId>auth</artifactId>
+            <version>1.0.0</version>
         </dependency>
     </dependencies>
 
