--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,9 @@
         <module>user</module>
         <module>codegen</module>
         <module>base-api</module>
+        <module>resource-permission</module>
+        <module>common</module>
+        <module>auth</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -32,6 +35,7 @@
         <alibaba-dubbo.version>0.2.0</alibaba-dubbo.version>
         <zookeeper.version>3.5.6</zookeeper.version>
         <dubbo.version>2.6.7</dubbo.version>
+        <servlet-api.version>4.0.1</servlet-api.version>
     </properties>
 
     <dependencyManagement>
@@ -61,6 +65,12 @@
                 </exclusions>
             </dependency>
 
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-security</artifactId>
+                <version>${springboot.version}</version>
+            </dependency>
+
             <!-- https://mvnrepository.com/artifact/com.alibaba/druid -->
             <dependency>
                 <groupId>com.alibaba</groupId>
@@ -80,12 +90,6 @@
                 <artifactId>mybatis-plus-boot-starter</artifactId>
                 <version>${mybatis-plus.version}</version>
             </dependency>
-            <!-- https://mvnrepository.com/artifact/com.baomidou/mybatis-plus-annotation -->
-            <dependency>
-                <groupId>com.baomidou</groupId>
-                <artifactId>mybatis-plus-annotation</artifactId>
-                <version>${mybatis-plus.version}</version>
-            </dependency>
 
             <dependency>
                 <groupId>com.baomidou</groupId>
@@ -93,6 +97,12 @@
                 <version>${mybatis-plus.version}</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-extension</artifactId>
+                <version>${mybatis-plus.version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>org.apache.velocity</groupId>
                 <artifactId>velocity-engine-core</artifactId>
@@ -127,7 +137,13 @@
                 <artifactId>zookeeper</artifactId>
                 <version>${zookeeper.version}</version>
             </dependency>
+            <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>javax.servlet-api</artifactId>
+                <version>${servlet-api.version}</version>
+            </dependency>
         </dependencies>
+
     </dependencyManagement>
 
     <build>
