--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,9 @@
         <dubbo.version>2.6.7</dubbo.version>
         <servlet-api.version>4.0.1</servlet-api.version>
         <swagger.version>2.9.2</swagger.version>
+        <jwt.version>0.9.1</jwt.version>
+        <commons-lang3.version>3.9</commons-lang3.version>
+        <gson.version>2.8.6</gson.version>
     </properties>
 
     <dependencyManagement>
@@ -150,6 +153,30 @@
                 <artifactId>springfox-swagger-ui</artifactId>
                 <version>${swagger.version}</version>
             </dependency>
+
+            <!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt -->
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt</artifactId>
+                <version>${jwt.version}</version>
+            </dependency>
+
+            <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${commons-lang3.version}</version>
+            </dependency>
+
+            <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>${gson.version}</version>
+            </dependency>
+
+
+
 
         </dependencies>
 
