优化权限 添加id生成

--- a/resource-permission/pom.xml
+++ b/resource-permission/pom.xml
@@ -32,6 +32,11 @@
             <groupId>org.dom4j</groupId>
             <artifactId>dom4j</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.wyy</groupId>
+            <artifactId>common</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
 </project>
