--- a/user/user-service/pom.xml
+++ b/user/user-service/pom.xml
@@ -86,10 +86,16 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.wyy</groupId>-->
+<!--            <artifactId>resource-permission</artifactId>-->
+<!--            <version>1.0.0</version>-->
+<!--        </dependency>-->
+
         <dependency>
-            <groupId>com.wyy</groupId>
-            <artifactId>resource-permission</artifactId>
-            <version>1.0.0</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
         </dependency>
 
     </dependencies>
