--- a/common/pom.xml
+++ b/common/pom.xml
@@ -36,6 +36,10 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
 
     </dependencies>
 
