--- a/user/user-provider/pom.xml
+++ b/user/user-provider/pom.xml
@@ -82,11 +82,6 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-configuration-processor</artifactId>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
             <groupId>com.wyy</groupId>
             <artifactId>idgenerator</artifactId>
             <version>1.0.0</version>
@@ -94,6 +89,11 @@
         <dependency>
             <groupId>com.wyy</groupId>
             <artifactId>actable</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.wyy</groupId>
+            <artifactId>auth</artifactId>
+            <version>1.0.0</version>
         </dependency>
 
     </dependencies>
