--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,12 @@
                 <version>${springboot.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-aop</artifactId>
+                <version>${springboot.version}</version>
+            </dependency>
+
             <!-- https://mvnrepository.com/artifact/com.alibaba/druid -->
             <dependency>
                 <groupId>com.alibaba</groupId>
@@ -197,6 +203,8 @@
                 <artifactId>spring-context</artifactId>
                 <version>${spring-framework.version}</version>
             </dependency>
+
+
 
             <dependency>
                 <groupId>org.springframework.boot</groupId>
