添加对fastdfs的支持

--- a/document/document-provider/pom.xml
+++ b/document/document-provider/pom.xml
@@ -84,6 +84,11 @@
             <artifactId>resource-permission</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.wyy</groupId>
+            <artifactId>fastdfs-provider</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
