--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>team</module>
         <module>system</module>
         <module>document</module>
+        <module>dfs</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -44,6 +45,7 @@
         <dom4j.version>2.1.1</dom4j.version>
         <spring-framework.version>5.2.3.RELEASE</spring-framework.version>
         <actable.version>1.0-SNAPSHOT</actable.version>
+        <fastdfs.version>1.27.2</fastdfs.version>
     </properties>
 
     <dependencyManagement>
@@ -222,6 +224,13 @@
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-tx</artifactId>
                 <version>${spring-framework.version}</version>
+            </dependency>
+
+            <!-- https://mvnrepository.com/artifact/com.github.tobato/fastdfs-client -->
+            <dependency>
+                <groupId>com.github.tobato</groupId>
+                <artifactId>fastdfs-client</artifactId>
+                <version>${fastdfs.version}</version>
             </dependency>
         </dependencies>
 
