--- a/document/document-provider/src/main/resources/application.yml
+++ b/document/document-provider/src/main/resources/application.yml
@@ -4,3 +4,11 @@ dubbo:
     name: @project.name@
 server:
   port: ${random.int[1000,9999]}
+
+fdfs:
+  so-timeout: 1501
+  connect-timeout: 601
+  thumb-image:             #缩略图生成参数
+    width: 150
+    height: 150
+  tracker-list: 192.168.31.150:22122,192.168.31.151:22122
