通用属性自动赋值

--- a/base-api/src/main/resources/config/application.yml
+++ b/base-api/src/main/resources/config/application.yml
@@ -42,3 +42,8 @@ logging:
     path: .
   level:
     com.easyray: debug
+
+mybatis-plus:
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
