--- a/easyray-framework-core/easyray-framework-core-api/pom.xml
+++ b/easyray-framework-core/easyray-framework-core-api/pom.xml
@@ -16,6 +16,10 @@
             <artifactId>easyray-framework-core-baseapi</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
