--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
         <spring-framework.version>5.2.3.RELEASE</spring-framework.version>
         <actable.version>1.0-SNAPSHOT</actable.version>
         <fastdfs.version>1.27.2</fastdfs.version>
+        <spring-security.version>5.2.1.RELEASE</spring-security.version>
     </properties>
 
     <dependencyManagement>
@@ -88,6 +89,12 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-aop</artifactId>
                 <version>${springboot.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-core</artifactId>
+                <version>${spring-security.version}</version>
             </dependency>
 
             <!-- https://mvnrepository.com/artifact/com.alibaba/druid -->
