--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,8 @@
         <dom4j.version>2.1.3</dom4j.version>
         <actable.version>1.0-SNAPSHOT</actable.version>
         <fastdfs.version>1.27.2</fastdfs.version>
+        <spring-session-data-redis.version>2.3.0.RELEASE</spring-session-data-redis.version>
+        <io.lettuce.version>5.2.2.RELEASE</io.lettuce.version>
     </properties>
 
     <dependencyManagement>
@@ -228,6 +230,18 @@
                 <groupId>com.github.tobato</groupId>
                 <artifactId>fastdfs-client</artifactId>
                 <version>${fastdfs.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.session</groupId>
+                <artifactId>spring-session-data-redis</artifactId>
+                <version>${spring-session-data-redis.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.lettuce</groupId>
+                <artifactId>lettuce-core</artifactId>
+                <version>${io.lettuce.version}</version>
             </dependency>
         </dependencies>
 
