--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,8 @@
         <fastdfs.version>1.27.2</fastdfs.version>
         <spring-session-data-redis.version>2.3.0.RELEASE</spring-session-data-redis.version>
         <io.lettuce.version>5.2.2.RELEASE</io.lettuce.version>
+        <spring-security.version>5.3.2.RELEASE</spring-security.version>
+        <commons-collections4.version>4.1</commons-collections4.version>
     </properties>
 
     <dependencyManagement>
@@ -212,6 +214,12 @@
                 <version>${spring-framework.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context</artifactId>
+                <version>${spring-framework.version}</version>
+            </dependency>
+
 
             <dependency>
                 <groupId>org.springframework.boot</groupId>
@@ -248,6 +256,12 @@
                 <groupId>io.lettuce</groupId>
                 <artifactId>lettuce-core</artifactId>
                 <version>${io.lettuce.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-collections4</artifactId>
+                <version>${commons-collections4.version}</version>
             </dependency>
         </dependencies>
 
