--- a/easyray-framework-core/easyray-framework-core-common/pom.xml
+++ b/easyray-framework-core/easyray-framework-core-common/pom.xml
@@ -45,6 +45,11 @@
             <artifactId>spring-boot-autoconfigure</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
