--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
         <io.lettuce.version>5.2.2.RELEASE</io.lettuce.version>
         <spring-security.version>5.3.2.RELEASE</spring-security.version>
         <commons-collections4.version>4.1</commons-collections4.version>
+        <spring-data-redis.version>2.3.1.RELEASE</spring-data-redis.version>
     </properties>
 
     <dependencyManagement>
@@ -250,6 +251,12 @@
                 <groupId>org.springframework.session</groupId>
                 <artifactId>spring-session-data-redis</artifactId>
                 <version>${spring-session-data-redis.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.data</groupId>
+                <artifactId>spring-data-redis</artifactId>
+                <version>${spring-data-redis.version}</version>
             </dependency>
 
             <dependency>
