添加数据级别权限控制测试 优化id自动赋值 优化通用属性自动填充 独立id生成器，脱离easyray框架独立运行

--- a/easyray-framework-core/easyray-framework-core-idgenerator/easyray-framework-core-idgenerator-api/pom.xml
+++ b/easyray-framework-core/easyray-framework-core-idgenerator/easyray-framework-core-idgenerator-api/pom.xml
@@ -10,12 +10,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>easyray-framework-core-idgenerator-api</artifactId>
-
     <dependencies>
         <dependency>
-            <groupId>com.easyray</groupId>
-            <artifactId>easyray-framework-core-baseapi</artifactId>
-            <version>1.0.0</version>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-extension</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.wyy</groupId>
+            <artifactId>actable</artifactId>
         </dependency>
     </dependencies>
 </project>
