--- a/easyray-framework-core/easyray-framework-core-baseapi/pom.xml
+++ b/easyray-framework-core/easyray-framework-core-baseapi/pom.xml
@@ -58,6 +58,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>com.easyray</groupId>
+            <artifactId>easyray-framework-core-idgenerator-api</artifactId>
+            <version>1.0.0</version>
+        </dependency>
 
     </dependencies>
 </project>
