--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
         <commons-lang3.version>3.9</commons-lang3.version>
         <gson.version>2.8.6</gson.version>
         <dom4j.version>2.1.3</dom4j.version>
-        <actable.version>1.0-SNAPSHOT</actable.version>
+        <actable.version>1.0.1</actable.version>
         <fastdfs.version>1.27.2</fastdfs.version>
         <spring-session-data-redis.version>2.3.0.RELEASE</spring-session-data-redis.version>
         <io.lettuce.version>5.2.2.RELEASE</io.lettuce.version>
