--- a/easyray-framework-core/easyray-framework-core-login/pom.xml
+++ b/easyray-framework-core/easyray-framework-core-login/pom.xml
@@ -23,7 +23,7 @@
             <!-- Import dependency management from Spring Boot -->
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-dependencies</artifactId>
-            <version>${springboot.version}</version>
+            <version>${spring-boot.version}</version>
             <type>pom</type>
             <scope>import</scope>
         </dependency>
