--- a/easyray-framework-sample/easyray-framework-sample-mail/pom.xml
+++ b/easyray-framework-sample/easyray-framework-sample-mail/pom.xml
@@ -3,37 +3,38 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
+		<artifactId>easyray-framework-sample</artifactId>
 		<groupId>com.easyray</groupId>
-		<artifactId>easyray-framework-component-team</artifactId>
 		<version>1.0.0</version>
-		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.easyray</groupId>
-	<artifactId>easyray-framework-component-team-web</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>easyray-framework-component-team-web</name>
-	<description>Demo project for Spring Boot</description>
+	<artifactId>easyray-framework-sample-mail</artifactId>
+	<version>1.0.0</version>
+	<name>easyray-framework-sample-mail</name>
+	<description>easyray-framework-sample-mail</description>
 
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
 
 	<dependencies>
-
 		<dependency>
-			<!-- Import dependency management from Spring Boot -->
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-dependencies</artifactId>
-			<version>${spring-boot.version}</version>
-			<type>pom</type>
-			<scope>import</scope>
+			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -44,16 +45,6 @@
 					<artifactId>junit-vintage-engine</artifactId>
 				</exclusion>
 			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>com.easyray</groupId>
-			<artifactId>easyray-framework-component-team-service</artifactId>
-			<version>1.0.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.easyray</groupId>
-			<artifactId>easyray-framework-core-auth</artifactId>
-			<version>1.0.0</version>
 		</dependency>
 	</dependencies>
 
