--- a/easyray-framework-util/easyray-framework-util-codegen/pom.xml
+++ b/easyray-framework-util/easyray-framework-util-codegen/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-freemarker</artifactId>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
