--- a/easyray-framework-component/easyray-framework-component-dfs/easyray-framework-component-fastdfs-provider/pom.xml
+++ b/easyray-framework-component/easyray-framework-component-dfs/easyray-framework-component-fastdfs-provider/pom.xml
@@ -27,5 +27,10 @@
             <artifactId>easyray-framework-component-dfs-api</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.easyray</groupId>
+            <artifactId>easyray-framework-core-common</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 </project>
