--- a/easyray-framework-component/easyray-framework-component-document/easyray-framework-component-document-provider/src/main/resources/application.yml
+++ b/easyray-framework-component/easyray-framework-component-document/easyray-framework-component-document-provider/src/main/resources/application.yml
@@ -2,7 +2,7 @@ dubbo:
   application:
     name: @project.name@
 server:
-  port: ${random.int[1000,9999]}
+  port: 7005
 
 fdfs:
   so-timeout: 1501
@@ -10,4 +10,4 @@ fdfs:
   thumb-image:             #缩略图生成参数
     width: 150
     height: 150
-  tracker-list: 192.168.31.150:22122,192.168.31.151:22122
+  tracker-list: 192.168.10.91:22122,192.168.10.92:22122
