--- a/easyray-framework-component/easyray-framework-component-dfs/easyray-framework-component-fastdfs-provider/pom.xml
+++ b/easyray-framework-component/easyray-framework-component-dfs/easyray-framework-component-fastdfs-provider/pom.xml
@@ -32,5 +32,21 @@
             <artifactId>easyray-framework-core-common</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.easyray</groupId>
+            <artifactId>easyray-framework-core-auth</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.junit.vintage</groupId>
+                    <artifactId>junit-vintage-engine</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
     </dependencies>
 </project>
