切换zookeeper为nacos作为注册中心

--- a/easyray-framework-component/easyray-framework-component-team/easyray-framework-component-team-service/pom.xml
+++ b/easyray-framework-component/easyray-framework-component-team/easyray-framework-component-team-service/pom.xml
@@ -16,21 +16,14 @@
             <artifactId>spring-context</artifactId>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/com.alibaba.boot/dubbo-spring-boot-starter -->
-        <dependency>
-            <groupId>com.alibaba.boot</groupId>
-            <artifactId>dubbo-spring-boot-starter</artifactId>
-            <exclusions>
-                <exclusion>
-                    <artifactId>spring-boot-starter</artifactId>
-                    <groupId>org.springframework.boot</groupId>
-                </exclusion>
-            </exclusions>
-        </dependency>
         <dependency>
             <groupId>com.easyray</groupId>
             <artifactId>easyray-framework-component-team-api</artifactId>
             <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo</artifactId>
         </dependency>
     </dependencies>
 
