--- a/easyray-framework-core/easyray-framework-core-idgenerator/easyray-framework-core-idgenerator-provider/src/main/resources/application.yml
+++ b/easyray-framework-core/easyray-framework-core-idgenerator/easyray-framework-core-idgenerator-provider/src/main/resources/application.yml
@@ -8,7 +8,7 @@ dubbo:
     name: dubbo
     port: -1
   registry:
-    address: zookeeper://localhost:2181
+    address: nacos://localhost:8848
   consumer:
     retries: -1
     timeout: -1
