--- a/easyray-framework-core/easyray-framework-core-baseapi/pom.xml
+++ b/easyray-framework-core/easyray-framework-core-baseapi/pom.xml
@@ -16,10 +16,7 @@
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-extension</artifactId>
         </dependency>
-        <dependency>
-            <groupId>com.alibaba.boot</groupId>
-            <artifactId>dubbo-spring-boot-starter</artifactId>
-        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot</artifactId>
@@ -62,6 +59,10 @@
             <groupId>com.easyray</groupId>
             <artifactId>easyray-framework-core-idgenerator-api</artifactId>
             <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo</artifactId>
         </dependency>
 
     </dependencies>
