--- a/easyray-framework-core/easyray-framework-core-baseapi/src/main/resources/config/application.yml
+++ b/easyray-framework-core/easyray-framework-core-baseapi/src/main/resources/config/application.yml
@@ -15,7 +15,7 @@ dubbo:
     name: dubbo
     port: -1
   registry:
-    address: zookeeper://localhost:2181
+    address: nacos://localhost:8848
   consumer:
     retries: -1
     timeout: -1
