--- a/pom.xml
+++ b/pom.xml
@@ -25,12 +25,10 @@
         <java.version>1.8</java.version>
         <alibaba.druid.version>1.1.21</alibaba.druid.version>
         <mybatis-plus.version>3.3.1</mybatis-plus.version>
-        <velocity-engine.version>2.1</velocity-engine.version>
         <groovy.version>2.4.18</groovy.version>
         <junit.version>4.12</junit.version>
         <mysql-connector.version>8.0.19</mysql-connector.version>
         <spring-boot.version>2.3.0.RELEASE</spring-boot.version>
-        <alibaba-dubbo.version>0.2.0</alibaba-dubbo.version>
         <servlet-api.version>4.0.1</servlet-api.version>
         <swagger.version>2.9.2</swagger.version>
         <jwt.version>0.9.1</jwt.version>
@@ -44,6 +42,7 @@
         <spring-security.version>5.3.2.RELEASE</spring-security.version>
         <commons-collections4.version>4.1</commons-collections4.version>
         <spring-data-redis.version>2.3.1.RELEASE</spring-data-redis.version>
+        <dubbo.version>2.7.7</dubbo.version>
     </properties>
 
     <dependencyManagement>
@@ -163,17 +162,22 @@
                 <scope>test</scope>
             </dependency>
 
-            <!-- https://mvnrepository.com/artifact/com.alibaba.boot/dubbo-spring-boot-starter -->
+            <!-- https://mvnrepository.com/artifact/org.apache.dubbo/dubbo-registry-nacos -->
             <dependency>
-                <groupId>com.alibaba.boot</groupId>
+                <groupId>org.apache.dubbo</groupId>
+                <artifactId>dubbo-registry-nacos</artifactId>
+                <version>${dubbo.version}</version>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/org.apache.dubbo/dubbo-spring-boot-starter -->
+            <dependency>
+                <groupId>org.apache.dubbo</groupId>
                 <artifactId>dubbo-spring-boot-starter</artifactId>
-                <version>${alibaba-dubbo.version}</version>
-                <exclusions>
-                    <exclusion>
-                        <artifactId>spring-boot-starter</artifactId>
-                        <groupId>org.springframework.boot</groupId>
-                    </exclusion>
-                </exclusions>
+                <version>${dubbo.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.dubbo</groupId>
+                <artifactId>dubbo</artifactId>
+                <version>${dubbo.version}</version>
             </dependency>
 
             <dependency>
