--- a/easyray-framework-component/easyray-framework-component-team/easyray-framework-component-team-api/pom.xml
+++ b/easyray-framework-component/easyray-framework-component-team/easyray-framework-component-team-api/pom.xml
@@ -17,6 +17,16 @@
             <artifactId>easyray-framework-core-baseapi</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.wyy</groupId>
+            <artifactId>actable</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project>
