--- a/easyray-framework-core/easyray-framework-core-resource-permission/pom.xml
+++ b/easyray-framework-core/easyray-framework-core-resource-permission/pom.xml
@@ -49,6 +49,10 @@
             <artifactId>easyray-framework-core-auth</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.wyy</groupId>
+            <artifactId>actable</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
