--- a/easyray-framework-component/easyray-framework-component-document/easyray-framework-component-document-api/pom.xml
+++ b/easyray-framework-component/easyray-framework-component-document/easyray-framework-component-document-api/pom.xml
@@ -17,5 +17,20 @@
             <artifactId>easyray-framework-core-baseapi</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.wyy</groupId>
+            <artifactId>actable</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
