--- a/easyray-framework-component/easyray-framework-component-team/easyray-framework-component-team-provider/pom.xml
+++ b/easyray-framework-component/easyray-framework-component-team/easyray-framework-component-team-provider/pom.xml
@@ -55,8 +55,18 @@
         </dependency>
 
         <dependency>
-            <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <groupId>com.wyy</groupId>
+            <artifactId>actable</artifactId>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.alibaba/druid -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>com.easyray</groupId>
@@ -68,6 +78,12 @@
             <artifactId>easyray-framework-core-resource-permission</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.easyray</groupId>
+            <artifactId>easyray-framework-core-properties</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
