--- a/easyray-framework-component/easyray-framework-component-team/easyray-framework-component-team-service/pom.xml
+++ b/easyray-framework-component/easyray-framework-component-team/easyray-framework-component-team-service/pom.xml
@@ -14,6 +14,11 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-spring-boot-starter</artifactId>
         </dependency>
 
         <dependency>
