--- a/easyray-framework-core/easyray-framework-core-api/pom.xml
+++ b/easyray-framework-core/easyray-framework-core-api/pom.xml
@@ -17,6 +17,16 @@
             <version>1.0.0</version>
         </dependency>
         <dependency>
+            <groupId>com.wyy</groupId>
+            <artifactId>actable</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
         </dependency>
