--- a/easyray-framework-core/easyray-framework-core-idgenerator/easyray-framework-core-idgenerator-api/pom.xml
+++ b/easyray-framework-core/easyray-framework-core-idgenerator/easyray-framework-core-idgenerator-api/pom.xml
@@ -13,11 +13,13 @@
     <dependencies>
         <dependency>
             <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-extension</artifactId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.wyy</groupId>
             <artifactId>actable</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
