--- a/easyray-framework-core/easyray-framework-core-login/src/main/resources/application.yml
+++ b/easyray-framework-core/easyray-framework-core-login/src/main/resources/application.yml
@@ -5,7 +5,8 @@ server:
 dubbo:
   application:
     name: @project.name@
+
 spring:
-  redis:
-    host: localhost
-    port: 6379
+  profiles:
+    include: common
+
