--- a/easyray-framework-core/easyray-framework-core-provider/pom.xml
+++ b/easyray-framework-core/easyray-framework-core-provider/pom.xml
@@ -49,7 +49,19 @@
             <groupId>org.apache.dubbo</groupId>
             <artifactId>dubbo-spring-boot-starter</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.wyy</groupId>
+            <artifactId>actable</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
@@ -61,6 +73,12 @@
         </dependency>
         <dependency>
             <groupId>com.easyray</groupId>
+            <artifactId>easyray-framework-core-extension</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.easyray</groupId>
             <artifactId>easyray-framework-core-auth</artifactId>
             <version>1.0.0</version>
         </dependency>
@@ -69,9 +87,11 @@
             <artifactId>easyray-framework-core-idgenerator-api</artifactId>
             <version>1.0.0</version>
         </dependency>
+
         <dependency>
-            <groupId>com.wyy</groupId>
-            <artifactId>actable</artifactId>
+            <groupId>com.easyray</groupId>
+            <artifactId>easyray-framework-core-properties</artifactId>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>com.easyray</groupId>
