--- a/pom.xml
+++ b/pom.xml
@@ -31,18 +31,16 @@
         <spring-boot.version>2.3.0.RELEASE</spring-boot.version>
         <servlet-api.version>4.0.1</servlet-api.version>
         <swagger.version>2.9.2</swagger.version>
-        <jwt.version>0.9.1</jwt.version>
         <commons-lang3.version>3.9</commons-lang3.version>
         <gson.version>2.8.6</gson.version>
         <dom4j.version>2.1.3</dom4j.version>
         <actable.version>1.0.1</actable.version>
         <fastdfs.version>1.27.2</fastdfs.version>
         <spring-session-data-redis.version>2.3.0.RELEASE</spring-session-data-redis.version>
-        <io.lettuce.version>5.2.2.RELEASE</io.lettuce.version>
         <spring-security.version>5.3.2.RELEASE</spring-security.version>
         <commons-collections4.version>4.1</commons-collections4.version>
-        <spring-data-redis.version>2.3.1.RELEASE</spring-data-redis.version>
         <dubbo.version>2.7.7</dubbo.version>
+        <slf4j.version>1.7.30</slf4j.version>
     </properties>
 
     <dependencyManagement>
@@ -82,12 +80,14 @@
                 <version>${spring-boot.version}</version>
             </dependency>
 
+            <!--            spring security-->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-security</artifactId>
                 <version>${spring-boot.version}</version>
             </dependency>
 
+            <!--            配置自动提示-->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-configuration-processor</artifactId>
@@ -100,28 +100,35 @@
                 <version>${spring-boot.version}</version>
             </dependency>
 
+            <!--            框架代码生成-->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-freemarker</artifactId>
                 <version>${spring-boot.version}</version>
             </dependency>
+
+            <!--            发送邮件，邮件模板-->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-thymeleaf</artifactId>
                 <version>${spring-boot.version}</version>
             </dependency>
+
+            <!--            发送邮件-->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-mail</artifactId>
                 <version>${spring-boot.version}</version>
             </dependency>
 
+            <!--            spring security,用户密码加密-->
             <dependency>
                 <groupId>org.springframework.security</groupId>
                 <artifactId>spring-security-core</artifactId>
                 <version>${spring-security.version}</version>
             </dependency>
 
+            <!--            数据库连接池-->
             <!-- https://mvnrepository.com/artifact/com.alibaba/druid -->
             <dependency>
                 <groupId>com.alibaba</groupId>
@@ -129,12 +136,15 @@
                 <version>${alibaba.druid.version}</version>
             </dependency>
 
+            <!--            mysql驱动-->
             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
                 <version>${mysql-connector.version}</version>
                 <scope>runtime</scope>
             </dependency>
+
+            <!--            mybatis plus-->
             <!-- https://mvnrepository.com/artifact/com.baomidou/mybatis-plus-boot-starter -->
             <dependency>
                 <groupId>com.baomidou</groupId>
@@ -144,10 +154,16 @@
 
             <dependency>
                 <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-core</artifactId>
+                <version>${mybatis-plus.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-extension</artifactId>
                 <version>${mybatis-plus.version}</version>
             </dependency>
 
+            <!--            代码生成-->
             <!-- https://mvnrepository.com/artifact/org.codehaus.groovy/groovy-all -->
             <dependency>
                 <groupId>org.codehaus.groovy</groupId>
@@ -155,6 +171,8 @@
                 <version>${groovy.version}</version>
                 <scope>test</scope>
             </dependency>
+
+            <!--            代码生成，单元测试-->
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
@@ -162,30 +180,36 @@
                 <scope>test</scope>
             </dependency>
 
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+
+            <!--            dubbo注册服务到nacos-->
             <!-- https://mvnrepository.com/artifact/org.apache.dubbo/dubbo-registry-nacos -->
             <dependency>
                 <groupId>org.apache.dubbo</groupId>
                 <artifactId>dubbo-registry-nacos</artifactId>
                 <version>${dubbo.version}</version>
             </dependency>
+
+            <!--            dubbo 与springboot-->
             <!-- https://mvnrepository.com/artifact/org.apache.dubbo/dubbo-spring-boot-starter -->
             <dependency>
                 <groupId>org.apache.dubbo</groupId>
                 <artifactId>dubbo-spring-boot-starter</artifactId>
                 <version>${dubbo.version}</version>
             </dependency>
+
+            <!--            dubbo-->
             <dependency>
                 <groupId>org.apache.dubbo</groupId>
                 <artifactId>dubbo</artifactId>
                 <version>${dubbo.version}</version>
             </dependency>
 
-            <dependency>
-                <groupId>javax.servlet</groupId>
-                <artifactId>javax.servlet-api</artifactId>
-                <version>${servlet-api.version}</version>
-            </dependency>
-
+            <!--            swagger-->
             <dependency>
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-swagger2</artifactId>
@@ -197,13 +221,7 @@
                 <version>${swagger.version}</version>
             </dependency>
 
-            <!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt -->
-            <dependency>
-                <groupId>io.jsonwebtoken</groupId>
-                <artifactId>jjwt</artifactId>
-                <version>${jwt.version}</version>
-            </dependency>
-
+            <!--            commons-lang-->
             <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
             <dependency>
                 <groupId>org.apache.commons</groupId>
@@ -211,6 +229,7 @@
                 <version>${commons-lang3.version}</version>
             </dependency>
 
+            <!--            gson-->
             <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
             <dependency>
                 <groupId>com.google.code.gson</groupId>
@@ -218,6 +237,7 @@
                 <version>${gson.version}</version>
             </dependency>
 
+            <!--            解析权限配置文件-->
             <dependency>
                 <groupId>org.dom4j</groupId>
                 <artifactId>dom4j</artifactId>
@@ -236,17 +256,21 @@
                 <version>${spring-framework.version}</version>
             </dependency>
 
+            <!--            自动建表-->
             <dependency>
                 <groupId>com.wyy</groupId>
                 <artifactId>actable</artifactId>
                 <version>${actable.version}</version>
             </dependency>
+
+            <!--            事务处理-->
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-tx</artifactId>
                 <version>${spring-framework.version}</version>
             </dependency>
 
+            <!--            fastdfs-->
             <!-- https://mvnrepository.com/artifact/com.github.tobato/fastdfs-client -->
             <dependency>
                 <groupId>com.github.tobato</groupId>
@@ -254,24 +278,27 @@
                 <version>${fastdfs.version}</version>
             </dependency>
 
+            <!--            spring session 结合springsecurity使用-->
             <dependency>
                 <groupId>org.springframework.session</groupId>
                 <artifactId>spring-session-data-redis</artifactId>
                 <version>${spring-session-data-redis.version}</version>
             </dependency>
-
+            <!--spring security,异常信息拦截-->
             <dependency>
-                <groupId>org.springframework.data</groupId>
-                <artifactId>spring-data-redis</artifactId>
-                <version>${spring-data-redis.version}</version>
+                <groupId>javax.servlet</groupId>
+                <artifactId>javax.servlet-api</artifactId>
+                <version>${servlet-api.version}</version>
             </dependency>
 
+            <!--            redis-->
             <dependency>
-                <groupId>io.lettuce</groupId>
-                <artifactId>lettuce-core</artifactId>
-                <version>${io.lettuce.version}</version>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-data-redis</artifactId>
+                <version>${spring-boot.version}</version>
             </dependency>
 
+            <!--            缓存用户登录信息-->
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-collections4</artifactId>
