--- a/easyray-framework-core/easyray-framework-core-idgenerator/easyray-framework-core-idgenerator-provider/pom.xml
+++ b/easyray-framework-core/easyray-framework-core-idgenerator/easyray-framework-core-idgenerator-provider/pom.xml
@@ -80,6 +80,11 @@
             <artifactId>easyray-framework-core-properties</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.easyray</groupId>
+            <artifactId>easyray-framework-core-printlog</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
