添加seata事务处理 优化公共配置项

--- a/easyray-framework-core/easyray-framework-core-baseapi/pom.xml
+++ b/easyray-framework-core/easyray-framework-core-baseapi/pom.xml
@@ -63,6 +63,9 @@
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-extension</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>io.seata</groupId>
+            <artifactId>seata-spring-boot-starter</artifactId>
+        </dependency>
     </dependencies>
 </project>
