--- a/easyray-framework-core/easyray-framework-core-properties/src/main/resources/application-common.yml
+++ b/easyray-framework-core/easyray-framework-core-properties/src/main/resources/application-common.yml
@@ -1,17 +1,27 @@
+mysql:
+  host: 192.168.99.240:3309
+redis:
+  host: 192.168.10.11
+nacos:
+  host: 192.168.10.11:8848
+
 #db config
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://192.168.99.240:3309/wyy_easyray?useUnicode=true&characterEncoding=utf8
+    url: jdbc:mysql://${mysql.host}/wyy_easyray?useUnicode=true&characterEncoding=utf8
     username: wangyuyuan
     password: wangyuyuan
     type: com.alibaba.druid.pool.DruidDataSource
+  #redis
+  redis:
+    host: ${redis.host}
+    port: 6379
+#utf-8
+server:
   servlet:
     encoding:
       charset: UTF-8
-  redis:
-    host: localhost
-    port: 6379
 
 #dubbo config
 dubbo:
@@ -19,7 +29,7 @@ dubbo:
     name: dubbo
     port: -1
   registry:
-    address: nacos://localhost:8848
+    address: nacos://${nacos.host}
   consumer:
     retries: -1
     timeout: -1
@@ -40,3 +50,15 @@ actable:
 #mybatis-plus:
 #  configuration:
 #    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+#seata config
+seata:
+  registry:
+    type: nacos
+    nacos:
+      application: seata-server
+      server-addr: ${nacos.host}
+  config:
+    type: nacos
+    nacos:
+      server-addr: ${nacos.host}
+
