--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
         <commons-collections4.version>4.1</commons-collections4.version>
         <dubbo.version>2.7.7</dubbo.version>
         <slf4j.version>1.7.30</slf4j.version>
+        <seata.version>1.2.0</seata.version>
     </properties>
 
     <dependencyManagement>
@@ -303,6 +304,12 @@
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-collections4</artifactId>
                 <version>${commons-collections4.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.seata</groupId>
+                <artifactId>seata-spring-boot-starter</artifactId>
+                <version>${seata.version}</version>
             </dependency>
         </dependencies>
 
