登录模块删除事务处理

--- a/easyray-framework-core/easyray-framework-core-login/pom.xml
+++ b/easyray-framework-core/easyray-framework-core-login/pom.xml
@@ -47,6 +47,12 @@
             <groupId>com.easyray</groupId>
             <artifactId>easyray-framework-core-auth</artifactId>
             <version>1.0.0</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>seata-spring-boot-starter</artifactId>
+                    <groupId>io.seata</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
