修复seata配置application-id太长的问题

--- a/easyray-framework-component/easyray-framework-component-team/easyray-framework-component-team-provider/src/main/resources/application.yml
+++ b/easyray-framework-component/easyray-framework-component-team/easyray-framework-component-team-provider/src/main/resources/application.yml
@@ -10,5 +10,5 @@ spring:
   profiles:
     include: common
 seata:
-  application-id: @project.name@
-  tx-service-group: @project.name@ #也用来生成nacos中的dataId
+  application-id: easyray-team-provider
+  tx-service-group: easyray-team-provider #也用来生成nacos中的dataId
