--- a/easyray-framework-component/easyray-framework-component-document/easyray-framework-component-document-provider/src/main/resources/application.yml
+++ b/easyray-framework-component/easyray-framework-component-document/easyray-framework-component-document-provider/src/main/resources/application.yml
@@ -16,5 +16,5 @@ fdfs:
     height: 150
   tracker-list: 192.168.10.91:22122,192.168.10.92:22122
 seata:
-  application-id: @project.name@
-  tx-service-group: @project.name@ #也用来生成nacos中的dataId
+  application-id: easyray-document-provider
+  tx-service-group: easyray-document-provider #也用来生成nacos中的dataId
