--- a/easyray-framework-component/easyray-framework-component-team/easyray-framework-component-team-web/src/main/resources/application.yml
+++ b/easyray-framework-component/easyray-framework-component-team/easyray-framework-component-team-web/src/main/resources/application.yml
@@ -11,5 +11,5 @@ spring:
   profiles:
     include: common
 seata:
-  application-id: @project.name@
-  tx-service-group: @project.name@ #也用来生成nacos中的dataId
+  application-id: easyray-team-web
+  tx-service-group: easyray-team-web #也用来生成nacos中的dataId
