--- a/easyray-framework-core/easyray-framework-core-provider/src/main/resources/application.yml
+++ b/easyray-framework-core/easyray-framework-core-provider/src/main/resources/application.yml
@@ -19,5 +19,5 @@ system:
     name: system-group
 
 seata:
-  application-id: @project.name@
-  tx-service-group: @project.name@ #也用来生成nacos中的dataId
+  application-id: easyray-system-provider
+  tx-service-group: easyray-system-provider #也用来生成nacos中的dataId
