优化seata分布式事务注解和spring事务处理的方式

--- a/easyray-framework-component/easyray-framework-component-team/easyray-framework-component-team-web/src/main/resources/application.yml
+++ b/easyray-framework-component/easyray-framework-component-team/easyray-framework-component-team-web/src/main/resources/application.yml
@@ -9,7 +9,7 @@ dubbo:
 
 spring:
   profiles:
-    include: common
+    include: common,default
 seata:
   application-id: easyray-team-web
   tx-service-group: easyray-team-web #也用来生成nacos中的dataId
